crates/vize_patina/tests/snapshots/integration__static_class_fix__empty-expression.snap
---
source: crates/vize_patina/tests/static_class_fix.rs
expression: "(&case, &initial, &result)"
---
(
    Case {
        id: "empty-expression",
        entry: "template",
        source: "<div :class=\"\"></div>",
        fixed: "<div :class=\"\"></div>",
        diagnostics: 0,
        edit_start: None,
        edit_end: None,
        diagnostic_start: None,
        diagnostic_end: None,
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
)
