crates/vize_patina/tests/snapshots/integration__static_class_fix__existing-static-class.snap
---
source: crates/vize_patina/tests/static_class_fix.rs
expression: "(&case, &initial, &result)"
---
(
    Case {
        id: "existing-static-class",
        entry: "template",
        source: "<div class=\"old\" :class=\"'stable'\"></div>",
        fixed: "<div class=\"old\" :class=\"'stable'\"></div>",
        diagnostics: 1,
        edit_start: None,
        edit_end: None,
        diagnostic_start: None,
        diagnostic_end: None,
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "vapor/prefer-static-class",
                severity: Warning,
                message: "Prefer static class attribute over dynamic :class binding for constant values",
                start: 17,
                end: 34,
                help: Some(
                    "Move static classes to the class attribute",
                ),
                labels: [],
                fix: None,
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "vapor/prefer-static-class",
                severity: Warning,
                message: "Prefer static class attribute over dynamic :class binding for constant values",
                start: 17,
                end: 34,
                help: Some(
                    "Move static classes to the class attribute",
                ),
                labels: [],
                fix: None,
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
)
