crates/vize_patina/tests/snapshots/integration__static_class_fix__outer-single-quote.snap
---
source: crates/vize_patina/tests/static_class_fix.rs
expression: "(&case, &initial, &result)"
---
(
    Case {
        id: "outer-single-quote",
        entry: "template",
        source: "<div :class='`stable`'></div>",
        fixed: "<div class=\"stable\"></div>",
        diagnostics: 1,
        edit_start: Some(
            5,
        ),
        edit_end: Some(
            22,
        ),
        diagnostic_start: Some(
            6,
        ),
        diagnostic_end: Some(
            22,
        ),
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "vapor/prefer-static-class",
                severity: Warning,
                message: "Prefer static class attribute over dynamic :class binding for constant values",
                start: 6,
                end: 22,
                help: None,
                labels: [],
                fix: Some(
                    Fix {
                        message: "Replace with static class attribute",
                        edits: [
                            TextEdit {
                                start: 5,
                                end: 22,
                                new_text: "class=\"stable\"",
                            },
                        ],
                    },
                ),
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
)
